# openclaw_aurora

./: .dockerignore  .env.example  .env.kommo  .env.kommo.example  .gitignore  .openclaw.json  ARQUITETURA-COMPLETA.md  AUDITORIA_KOMMO_COMPLETA.md  AUDIT_INDEX_COMPLETO.md  AUDIT_REALIDADE_FINAL.md  AUDIT_RESUMO_EXECUTIVO.md  AURORA_COCKPIT_CHAT_READY.md  CLAUDE-CODE-PROMPT.md  COCKPIT_AURORA_CHAT_TESTING.md  COCKPIT_INTEGRATION_SUMMARY.md  COCKPIT_README.md  COCKPIT_TESTING_GUIDE.md  COMECE-AQUI.md  COMECE_AQUI_KOMMO.txt  COMECE_AQUI_SUPABASE_ARCHON.md  COMO_COMPILAR_VIDEOS.md  COMPILE_QUICK_REF.txt  COMPLIANCE_REPORTER_S27_DOCUMENTATION.md  CONFIGURAR-ADMIN.bat  CONFIGURAR-IAS.md  CONSOLIDACAO_CHECKLIST.md  COST-ANALYZER-INDEX.md  CREATION_COMPLETE.txt  DELIVERY_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REPORT.md  DESCOBRIR-CHAT-ID.md  Dockerfile  EVOLUCAO_KHRON_AVALIACAO.md  EXECUTAR_AGORA.txt  FIX-PATHS.ps1  FLUXOS-VISUAIS.md  GET-CHAT-ID.ps1  GUIA-RAPIDO.md  HUBS_COMPLETE_INVENTORY.md  (+100 more)
akasha-hub/: SOUL.md  run-safe.sh
aurora-monitor-ts/: package-lock.json  package.json  test-quick.js  tsconfig.json
aurora_monitor/: __init__.py
config/: default.json
dashboard/: package.json  pnpm-lock.yaml  vercel.json
dashboard-prometheus/: package.json  vercel.json
docs/: AURORA_AUDIT_FINAL.md  CHECKLIST_INTEGRACAO_KOMMO.md  CLAUDE-CODE-PROMPT.md  COMPLETE_SETUP_TELEGRAM_AURORA.md  COST-ANALYZER-COMPLETION-REPORT.md  COST-ANALYZER-SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REPORT.md  DOCUMENTATION_INDEX.md  ENABLE_COCKPIT_CHAT.md  EVOLUCAO_KHRON_AVALIACAO.md  FINAL-DELIVERY-REPORT-S20.md  GUARDRAIL_SKILL.md  GUIA_OAUTH_KOMMO.md  HUBS_MAPEAMENTO.md  IMPLEMENTATION_REPORT.md  OPENCLAW_QUICK_REFERENCE.md  OPERATOR_CORE_CAPABILITIES.md  PHASE5_COMPLETION_REPORT.md  PLANO_MIGRACAO_ESTRUTURA.md  PROJECT_STRUCTURE.md  RESUMO_EXECUTIVO_ROADMAP.md  S15_MASTER_INDEX.md  S15_SKILL_CREATED.md  S16_DELIVERY_COMPLETE.md  S20-DELIVERABLES-INDEX.md  S21_QUICK_REFERENCE.md  S29_IMPLEMENTATION_SUMMARY.md  SKILL-S20-CREATION-COMPLETE.md  SKILLS_ARCHITECTURE.md  SKILLS_QUICK_REFERENCE.md  SKILL_S15_DELIVERABLES.md  SKILL_S15_RATE_LIMITER_SUMMARY.md  SKILL_S30_CREATION_COMPLETE.md  SOCIAL_HUB_ENTERPRISE_IMPLEMENTATION.md  SOCIAL_HUB_FINAL_STATUS.md  SUPABASE_AGENT_BLUEPRINT.md  SUPABASE_ARCHON_ENTREGA_FINAL.md  SUPABASE_SECRETS_SCANNER_S04_CREATION.md  SYSTEM_ARCHITECTURE_COMPLETE.md  (+2 more)
examples/: advanced_usage.py  basic_usage.py  flask_integration.py
hub_enterprise_mvp/: README.md  orchestrate.sh
scripts/: cli-chat.ts  get-kommo-pipeline-ids.js  migrate-structure.ts  smoke-skills-count.ts  smoke-test-p0.ts  smoke-test-p1.ts  test-kommo-webhook.sh
skills/: ai-claude.ts  ai-gpt.ts  ai-ollama.ts  akasha-hub.ts  analytics-roi.ts  autopc-control.ts  (+44 more)
(+394 files in other folders)
